@@ -11,14 +11,21 @@ import com.grits.userservice.model.request.paymentcard.UpdateCardRequest;
 import com.grits.userservice.model.response.paymentcard.PaymentCardResponse;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class PaymentCardService {
 
     private final PaymentCardDao paymentCardDao;
@@ -29,6 +36,8 @@ public class PaymentCardService {
 
     @Transactional
     public PaymentCardResponse createCard(UUID userId, CreateCardRequest request) {
+        log.info("Creating card for user {}", userId);
+
         User user = userDao.getUserById(userId);
         if (user.getPaymentCards().size() >= 5) {
             throw new MaxCardAmountException(userId);
@@ -37,45 +46,72 @@ public class PaymentCardService {
         card.setUser(user);
         card.setActive(true);
         PaymentCard savedCard = paymentCardDao.save(card);
+
+        log.info("Card created for user {}", userId);
         return paymentCardMapper.toResponse(savedCard);
     }
 
+    @Cacheable(value = "cards", key = "#id")
     public PaymentCardResponse getCardById(UUID id) {
+        log.info("Getting card with id {}", id);
         PaymentCard card = paymentCardDao.getPaymentCardById(id);
         return paymentCardMapper.toResponse(card);
     }
 
+    @Cacheable(value = "userCards", key = "#userId")
     public List<PaymentCardResponse> getCardsByUserId(UUID userId) {
+        log.info("Getting cards for user {}", userId);
         return paymentCardDao
                 .getPaymentCardsByUserId(userId)
                 .stream()
                 .map(paymentCardMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Page<PaymentCardResponse> getAllCards(String holder, int page, int size) {
+        log.info("Getting all cards");
         return paymentCardDao
                 .getAllCards(holder, page, size)
                 .map(paymentCardMapper::toResponse);
     }
 
     @Transactional
+    @Caching(
+            put = @CachePut(value = "cards", key = "#id"),
+            evict = @CacheEvict(value = "userCards", key = "#result.userId")
+    )
     public PaymentCardResponse updateCard(UUID id, UpdateCardRequest request) {
+        log.info("Updating card with id {}", id);
+
         PaymentCard card = paymentCardDao.getPaymentCardById(id);
         paymentCardMapper.updateEntity(request, card);
         PaymentCard updatedCard = paymentCardDao.save(card);
+
+        log.info("Card updated with id {}", id);
         return paymentCardMapper.toResponse(updatedCard);
     }
 
     @Transactional
+    @Caching(
+            put = @CachePut(value = "cards", key = "#id"),
+            evict = @CacheEvict(value = "userCards", key = "#result.userId")
+    )
     public PaymentCardResponse deactivateCard(UUID id) {
+        log.info("Deactivating card with id {}", id);
         PaymentCard card = paymentCardDao.deactivatePaymentCard(id);
+        log.info("Card deactivated with id {}", id);
         return paymentCardMapper.toResponse(card);
     }
 
     @Transactional
+    @Caching(
+            put = @CachePut(value = "cards", key = "#id"),
+            evict = @CacheEvict(value = "userCards", key = "#result.userId")
+    )
     public PaymentCardResponse activateCard(UUID id) {
+        log.info("Activating card with id {}", id);
         PaymentCard card = paymentCardDao.activatePaymentCard(id);
+        log.info("Card activated with id {}", id);
         return paymentCardMapper.toResponse(card);
     }
 }
